# Crew_AI_Project

./: .gitignore  1_email_agent.ipynb  2_email_agent_with_tool.ipynb  3_crew.ipynb  4_crew_with_internet.ipynb  5_yaml.py  Market Research Report - AI Powered Excel Automation Tool.txt  README.md  main.py  pyproject.toml  pyvenv.cfg
config/: agents.yaml  tasks.yaml
marketing_crew/: crew.py
marketing_crew/config/: agents.yaml
resources/drafts/: content_calendar.md  marketing_strategy.md
resources/drafts/posts/: linkedin_post_1.md
