[project]
name = "crew-ai-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ananya",email = "ananyaroyfeb14@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.1"
dependencies = [
    "crewai (>=0.175.0,<0.176.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
